Update styles from aprobacion_comercial, aprobacion_financiera and aprobacion_comercial

--- a/pagadurias/templates/pagadurias.html
+++ b/pagadurias/templates/pagadurias.html
@@ -20,7 +20,7 @@
                 {% for pagaduria in pagadurias %}
                 <tr class="border-b border-gray-200 hover:bg-blue-50 transition duration-300">
                     <td class="py-3 px-4">{{ pagaduria.nombre }}</td>
-                    <td class="py-3 px-4">{{ pagaduria.totalEmpleados }}</td>
+                    <td class="py-3 px-4">{{ sucursal.totalEmpleados }}</td>
                     <td class="py-3 px-4">{{ pagaduria.fechaCreacion }}</td>
                     <td class="py-3 px-4">{{ pagaduria.asesorAsignado }}</td>
                     <td class="py-3 px-4">
