--- a/pagadurias/templates/aprobacion/aprobacion_riesgos.html
+++ b/pagadurias/templates/aprobacion/aprobacion_riesgos.html
@@ -265,7 +265,7 @@
 
                 <!-- Observación Riesgos -->
                 <div class="flex flex-col mt-2 relative">
-                    {{ form.observacionRiesgos|add_class:"peer input-field bg-white text-black p-3 rounded-lg shadow focus:outline-none focus:ring-2 focus:ring-[#2f3769]" }}
+                    {{ formObservacion.observacion|add_class:"peer input-field bg-white text-black p-3 rounded-lg shadow focus:outline-none focus:ring-2 focus:ring-[#2f3769]" }}
                     <label class="text-sm font-semibold mt-2">📝 Observación de Riesgos:</label>
                 </div>
 
