--- a/pagadurias/templates/aprobacion/aprobacion_financiera.html
+++ b/pagadurias/templates/aprobacion/aprobacion_financiera.html
@@ -261,7 +261,7 @@
             <!-- Título del formulario -->
             <p class="w-full text-center text-xl font-bold text-[#38407a] mb-4">📝 Evaluación Financiera</p>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-[#38407a] p-6 rounded-xl border border-[#2f3769] shadow text-white">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white p-6 rounded-xl border border-[#2f3769] shadow text-white">
 
                 <!-- Observación -->
                 <div class="flex flex-col mt-2 relative">
